--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   qr_flutter: ^4.1.0
   mobile_scanner: ^3.5.6
   uuid: ^3.0.7
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
