--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   mobile_scanner: ^3.5.6
   uuid: ^3.0.7
   url_launcher: ^6.2.5
+  image_picker: ^1.0.7
+  path_provider: ^2.1.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
