--- a/loyalty-proxy/package.json
+++ b/loyalty-proxy/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
 
