--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   path: ^1.8.3
   firebase_core: ^3.0.0
   firebase_messaging: ^15.0.0
+  geolocator: ^10.1.0
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
