--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_messaging: ^15.0.0
   geolocator: ^10.1.0
   permission_handler: ^11.0.0
+  pdf: ^3.10.0
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
