--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,8 +25,10 @@ subprojects {
         if (project.hasProperty('android')) {
             project.android {
                 compileSdkVersion 35
-                if (project.android.hasProperty('namespace') && project.android.namespace == null) {
-                    project.android.namespace = project.group
+                if (!project.android.hasProperty('namespace') || project.android.namespace == null) {
+                    if (project.hasProperty('group') && project.group) {
+                        project.android.namespace = project.group
+                    }
                 }
             }
         }
