--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -24,3 +24,13 @@ plugins {
 }
 
 include ":app"
+
+gradle.projectsEvaluated {
+    subprojects.each { project ->
+        if (project.hasProperty('android') && project.name != 'app') {
+            project.android {
+                compileSdkVersion 35
+            }
+        }
+    }
+}
