--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   firebase_messaging: ^15.0.0
   geolocator: ^14.0.0
   permission_handler: ^11.0.0
+
+dependency_overrides:
+  geolocator_android: ^5.0.2
   pdf: ^3.10.0
   printing: ^5.12.0
   syncfusion_flutter_pdfviewer: ^27.1.45
