--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
     id "com.google.gms.google-services"
 }
 
+// Конфигурация Flutter должна быть до блока android для правильной инициализации
+flutter {
+    source = "../.."
+}
+
 android {
     namespace = "com.example.arabica_app"
     compileSdk = 35
@@ -39,10 +44,6 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
-}
-
-flutter {
-    source = "../.."
 }
 
 dependencies {
