--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,25 +19,23 @@ rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
     
-    // Инициализация свойства flutter для плагинов ДО их оценки
-    project.beforeEvaluate {
-        // Инициализируем ext.flutter для всех подпроектов
-        if (!project.hasProperty('ext')) {
-            project.ext = [:]
-        }
-        if (!project.ext.hasProperty('flutter')) {
-            project.ext.flutter = [
-                compileSdkVersion: 35,
-                minSdkVersion: 21,
-                targetSdkVersion: 35
-            ]
-        }
-    }
-    
+    // Инициализация свойства flutter для плагинов после их оценки
     project.afterEvaluate {
         // Устанавливаем свойство flutter в android extension для плагинов
         if (project.hasProperty('android') && project.name != 'app') {
             try {
+                // Инициализируем ext.flutter если его нет
+                if (!project.hasProperty('ext')) {
+                    project.ext = [:]
+                }
+                if (!project.ext.hasProperty('flutter')) {
+                    project.ext.flutter = [
+                        compileSdkVersion: 35,
+                        minSdkVersion: 21,
+                        targetSdkVersion: 35
+                    ]
+                }
+                // Устанавливаем свойство flutter в android extension
                 if (!project.android.ext.hasProperty('flutter')) {
                     project.android.ext.flutter = project.ext.flutter
                 }
