--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -24,3 +24,15 @@ plugins {
 }
 
 include ":app"
+
+// Инициализация свойства flutter для всех подпроектов ДО их оценки
+gradle.beforeProject { project ->
+    if (project.name != 'app') {
+        // Инициализируем ext.flutter для всех подпроектов
+        project.ext.flutter = [
+            compileSdkVersion: 35,
+            minSdkVersion: 21,
+            targetSdkVersion: 35
+        ]
+    }
+}
