Добавлен шрифт DejaVu Sans для поддержки кириллицы в PDF

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ flutter:
   assets:
     - assets/menu.json
     - assets/images/
+    - assets/fonts/
+
+  fonts:
+    - family: DejaVuSans
+      fonts:
+        - asset: assets/fonts/DejaVuSans.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
