--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   pdf: ^3.10.0
   printing: ^5.12.0
   syncfusion_flutter_pdfviewer: ^27.1.45
+  open_file: ^3.5.0
 
 dev_dependencies:
   flutter_test:
