--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   printing: ^5.12.0
   syncfusion_flutter_pdfviewer: ^27.1.45
   open_file: ^3.5.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
