--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^27.1.45
   open_file: ^3.5.0
   table_calendar: ^3.1.2
+  file_picker: ^8.0.0
+  excel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
