--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,7 +4,8 @@ android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
-org.gradle.daemon=true
-org.gradle.parallel=true
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.caching=false
 org.gradle.configureondemand=true
 android.suppressUnsupportedCompileSdk=34
