--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,12 @@
 buildscript {
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.4.0'
     }
 }
@@ -13,35 +16,21 @@ allprojects {
         google()
         mavenCentral()
     }
+    
+    // Инициализация свойства flutter для всех подпроектов
+    ext.flutter = [
+        compileSdkVersion: 35,
+        minSdkVersion: 21,
+        targetSdkVersion: 35,
+        versionCode: 1,
+        versionName: "1.0.0"
+    ]
 }
 
-rootProject.buildDir = "../build"
+rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-    
-    project.afterEvaluate {
-        if (project.hasProperty('android') && project.name != 'app') {
-            try {
-                // Устанавливаем свойство flutter в android extension
-                if (!project.android.ext.hasProperty('flutter')) {
-                    project.android.ext.flutter = project.ext.flutter
-                }
-                // Устанавливаем compileSdkVersion явно
-                if (project.android.hasProperty('compileSdkVersion')) {
-                    project.android.compileSdkVersion = 35
-                } else if (project.android.hasProperty('compileSdk')) {
-                    project.android.compileSdk = 35
-                }
-            } catch (e) {
-                // Игнорируем ошибки
-            }
-        }
-    }
 }
 subprojects {
-    project.evaluationDependsOn(":app")
-}
-
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+    project.evaluationDependsOn(':app')
 }
