--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
 }
 
 flutter {
-    source = rootProject.file('../..')
+    source = rootProject.projectDir.parentFile
 }
 
 dependencies {
