--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -24,3 +24,29 @@ plugins {
 }
 
 include ":app"
+
+// Инициализация свойства flutter ДО загрузки проектов
+gradle.settingsEvaluated { settings ->
+    try {
+        settings.rootProject.ext.flutter = [
+            compileSdkVersion: 35,
+            minSdkVersion: 21,
+            targetSdkVersion: 35,
+            versionCode: 1,
+            versionName: "1.0.0"
+        ]
+    } catch (e) {
+        // Игнорируем ошибку, если ext недоступен
+    }
+}
+
+// Инициализация для всех подпроектов
+gradle.beforeProject { project ->
+    project.ext.flutter = [
+        compileSdkVersion: 35,
+        minSdkVersion: 21,
+        targetSdkVersion: 35,
+        versionCode: 1,
+        versionName: "1.0.0"
+    ]
+}
