Исправлена конфигурация Flutter source: используется file() с полным путем

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
 }
 
 flutter {
-    source = rootProject.projectDir.parentFile
+    source = file("${rootProject.projectDir}/../..")
 }
 
 dependencies {
