--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -25,31 +25,11 @@ plugins {
 
 include ":app"
 
-// Инициализация свойства flutter ДО загрузки проектов
-gradle.settingsEvaluated { settings ->
-    settings.rootProject.ext.flutter = [
-        compileSdkVersion: 35,
-        minSdkVersion: 21,
-        targetSdkVersion: 35,
-        versionCode: 1,
-        versionName: "1.0.0"
-    ]
-}
-
 // Инициализация для всех подпроектов
+// ПРИМЕЧАНИЕ: allprojects {} и gradle.settingsEvaluated {} не поддерживаются в Gradle 8+
+// Используем только gradle.beforeProject {} для совместимости
 gradle.beforeProject { project ->
     project.ext.flutter = [
-        compileSdkVersion: 35,
-        minSdkVersion: 21,
-        targetSdkVersion: 35,
-        versionCode: 1,
-        versionName: "1.0.0"
-    ]
-}
-
-// Также через allprojects для совместимости
-allprojects {
-    ext.flutter = [
         compileSdkVersion: 35,
         minSdkVersion: 21,
         targetSdkVersion: 35,
