Fix: Define Flutter source in settings.gradle and use in app/build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,11 +6,8 @@ plugins {
     id "com.google.gms.google-services"
 }
 
-// Define Flutter source before plugin applies
-project.ext.flutterSource = file("../..")
-
 flutter {
-    source = project.ext.flutterSource
+    source = rootProject.ext.flutterSourceDir
 }
 
 android {
