Fix: Use direct file path for Flutter source in flutter block

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 flutter {
-    source = rootProject.ext.flutterSourceDir
+    source = file("${rootProject.projectDir}/..")
 }
 
 android {
