--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,6 @@
+// Define Flutter source before applying plugins
+def flutterSourceDir = file("${rootProject.projectDir}/..")
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -7,7 +10,7 @@ plugins {
 }
 
 flutter {
-    source = file("${rootProject.projectDir}/..")
+    source = flutterSourceDir
 }
 
 android {
