--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,3 @@
-// Define Flutter source before applying plugins
-def flutterSourceDir = file("${rootProject.projectDir}/..")
-
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -10,7 +7,7 @@ plugins {
 }
 
 flutter {
-    source = flutterSourceDir
+    source = file("${rootProject.projectDir}/..")
 }
 
 android {
